# ESP32_Logger

./: .gitignore  ARCHITECTURE.md  AUDIT_20260420.md  Audit.md  Audit_report_17042026.md  BLUEPRINT_MODULAR.md  BLUEPRINT_MONOLITH.md  COMPARISON.md  ConfigManager.cpp  DataLogger.cpp  ESP_Logger.ino  FUTURE_UPDATES.md  HardwareManager.cpp  INSTRUCTIONS.md  Logger.ino  README.md  RtcManager.cpp  StorageManager.cpp  Utils.h  WiFiManager.cpp  audit_20032026.md  audit_webui.md  changelog.txt  compile_log.txt  full_logger.ino  partitions.csv  partitions_balanced.csv  platformio.ini
.github/: FUNDING.yml
.github/workflows/: build-bootloader.yml  build-firmware.yml
design/: ESP32 Logger Redesign.html  esp32-redesign.css  esp32-redesign.js
docs/: MIGRATION_PLAN.md
logs/: day-000000.jsonl
schematics/: README.md
scripts/: copy_sketch.py
src/: arduino_build_flags.h  setup.h
src/core/: Config.h  Globals.cpp  Globals.h  IModule.h  ModuleRegistry.cpp  ModuleRegistry.h  SensorTypes.h
src/drivers/: BME280_Mini.h  BME688_Mini.h  DS1302_Mini.h  DS18B20_Mini.h  MQTT_Mini.h
src/export/: ExportManager.cpp  ExportManager.h  HttpExporter.cpp  HttpExporter.h  IExporter.h  MqttExporter.cpp  MqttExporter.h  OpenSenseMapExporter.cpp  (+5 more)
tests/: test_api.sh
tools/: build_web.py  clean_logs.py  fix_watchdog.ps1  flash_bootloader.py  generate_changelog.sh  gzip_www.sh  upload_www.py
tools/flash_bootloader/: Cargo.toml  build.rs
tools/flash_bootloader/src/: main.rs
www/: _fix_all.js  files.html  index.html  platform_config.json  settings.html  style.css  web.js
(+114 files in other folders)
